unpackaged/main/default/objects/Form__c/fields/MOE2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>MOE2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOE2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>