unpackaged/main/default/objects/Form__c/fields/MOE3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>MOE3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOE3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>