unpackaged/main/default/objects/Form__c/fields/Moving_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Moving_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moving Equipment</label>
    <type>Checkbox</type>
</CustomField>