unpackaged/main/default/objects/Form__c/fields/Moving_Equipment_Pick__c.field-meta.xml
<CustomField>
    <fullName>Moving_Equipment_Pick__c</fullName>
    <label>Moving Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm machinery guard integrity</fullName>
            </value>
            <value>
                <fullName>Provide protective barriers</fullName>
            </value>
            <value>
                <fullName>Observer to monitor proximity of people and equipment</fullName>
            </value>
            <value>
                <fullName>Shut down or lock out equipment</fullName>
            </value>
            <value>
                <fullName>Do not work in the line of fire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>