unpackaged/main/default/objects/Form__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No</label>
    <type>Checkbox</type>
</CustomField>