unpackaged/main/default/objects/Form__c/fields/O2__c.field-meta.xml
<CustomField>
    <fullName>O2__c</fullName>
    <label>O2 (19.5-23.5%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>