unpackaged/main/default/objects/Form__c/fields/Oil_Level_in_SWD_Pump__c.field-meta.xml
<CustomField>
    <fullName>Oil_Level_in_SWD_Pump__c</fullName>
    <inlineHelpText>Check Oil in SWD Pump and record results</inlineHelpText>
    <label>Oil Level in SWD Pump</label>
    <type>TextArea</type>
</CustomField>