unpackaged/main/default/objects/Form__c/fields/Oil_Sample_Pulled__c.field-meta.xml
<CustomField>
    <fullName>Oil_Sample_Pulled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was Oil Sample Pulled?</inlineHelpText>
    <label>Oil Sample Pulled</label>
    <type>Checkbox</type>
</CustomField>