unpackaged/main/default/objects/Form__c/fields/OIl_Zero_Verify_In_Line__c.field-meta.xml
<CustomField>
    <fullName>OIl_Zero_Verify_In_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OIl Zero Verify In Line</label>
    <type>Checkbox</type>
</CustomField>