unpackaged/main/default/objects/Form__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>Other Concerns, Contractor Requirements, or hazards identified:</inlineHelpText>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>