unpackaged/main/default/objects/Form__c/fields/Other_PPE__c.field-meta.xml
<CustomField>
    <fullName>Other_PPE__c</fullName>
    <label>Other PPE</label>
    <type>TextArea</type>
</CustomField>