unpackaged/main/default/objects/Form__c/fields/Other_WP__c.field-meta.xml
<CustomField>
    <fullName>Other_WP__c</fullName>
    <formula>INCLUDES( X4_Additional_PPE__c , &quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other_WP</label>
    <type>Checkbox</type>
</CustomField>