unpackaged/main/default/objects/Form__c/fields/P2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>P2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>