unpackaged/main/default/objects/Form__c/fields/P3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>P3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>