unpackaged/main/default/objects/Form__c/fields/PE2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>PE2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>