unpackaged/main/default/objects/Form__c/fields/PEE2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>PEE2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEE2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>