unpackaged/main/default/objects/Form__c/fields/PEE3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>PEE3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEE3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>