unpackaged/main/default/objects/Form__c/fields/Performed_within_max_viewing_distance__c.field-meta.xml
<CustomField>
    <fullName>Performed_within_max_viewing_distance__c</fullName>
    <label>Performed within max viewing distance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>