unpackaged/main/default/objects/Form__c/fields/Personal_H2S_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Personal_H2S_Monitor__c</fullName>
    <formula>INCLUDES( X4_Additional_PPE__c , &quot;Personal H2S Monitor&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal H2S Monitor</label>
    <type>Checkbox</type>
</CustomField>