unpackaged/main/default/objects/Form__c/fields/Pig_Used_3__c.field-meta.xml
<CustomField>
    <fullName>Pig_Used_3__c</fullName>
    <label>Pig Used  #3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Cup Pig</fullName>
            </value>
            <value>
                <fullName>4 Cup Pig</fullName>
            </value>
            <value>
                <fullName>Cup and Brush Pig</fullName>
            </value>
            <value>
                <fullName>Disc and Brush Pig</fullName>
            </value>
            <value>
                <fullName>Disc Pig</fullName>
            </value>
            <value>
                <fullName>Foam</fullName>
            </value>
            <value>
                <fullName>Poly Coated Foam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>