unpackaged/main/default/objects/Form__c/fields/Pigging_Results__c.field-meta.xml
<CustomField>
    <fullName>Pigging_Results__c</fullName>
    <label>Pigging Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy paraffin: all ribs are full of paraffin and at least 5 gallons of paraffin in front of it</fullName>
            </value>
            <value>
                <fullName>Moderate paraffin: 2 to 3 ribs are full of paraffin and at least 2 gallons in front of it</fullName>
            </value>
            <value>
                <fullName>Light paraffin: 1 rib is full of paraffin with no paraffin in front of the pig</fullName>
            </value>
            <value>
                <fullName>No paraffin: absolutely no paraffin on the pig or in front of the pig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>