unpackaged/main/default/objects/Form__c/fields/Piping_Coating_Condition__c.field-meta.xml
<CustomField>
    <fullName>Piping_Coating_Condition__c</fullName>
    <label>Piping Coating Condition</label>
    <type>TextArea</type>
</CustomField>