unpackaged/main/default/objects/Form__c/fields/Piping_Corrosion_Condition__c.field-meta.xml
<CustomField>
    <fullName>Piping_Corrosion_Condition__c</fullName>
    <label>Piping Corrosion Condition</label>
    <type>TextArea</type>
</CustomField>