unpackaged/main/default/objects/Form__c/fields/PLV3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>PLV3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PLV3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>