unpackaged/main/default/objects/Form__c/fields/Pneumatic_Controller__c.field-meta.xml
<CustomField>
    <fullName>Pneumatic_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pneumatic Controller</label>
    <referenceTo>ESG_Data__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>