unpackaged/main/default/objects/Form__c/fields/Pollution_Checks__c.field-meta.xml
<CustomField>
    <fullName>Pollution_Checks__c</fullName>
    <label>Pollution Checks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>