unpackaged/main/default/objects/Form__c/fields/Poor_Lighting_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Poor_Lighting_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poor Lighting/Visibility</label>
    <type>Checkbox</type>
</CustomField>