unpackaged/main/default/objects/Form__c/fields/Portable_Electrical_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Portable_Electrical_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portable Electrical Equipment</label>
    <type>Checkbox</type>
</CustomField>