unpackaged/main/default/objects/Form__c/fields/Potential_Hazards__c.field-meta.xml
<CustomField>
    <fullName>Potential_Hazards__c</fullName>
    <label>Potential Hazards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>