unpackaged/main/default/objects/Form__c/fields/Potential_Spills__c.field-meta.xml
<CustomField>
    <fullName>Potential_Spills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Spills</label>
    <type>Checkbox</type>
</CustomField>