unpackaged/main/default/objects/Form__c/fields/Potential_Spills_Pick__c.field-meta.xml
<CustomField>
    <fullName>Potential_Spills_Pick__c</fullName>
    <label>Potential Spills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drain equipment</fullName>
            </value>
            <value>
                <fullName>Hoses, connections in good condition</fullName>
            </value>
            <value>
                <fullName>Spill containment equipment</fullName>
            </value>
            <value>
                <fullName>Have spill cleanup materials and equipment on hand</fullName>
            </value>
            <value>
                <fullName>Restrain and isolate hoses when not in use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>