unpackaged/main/default/objects/Form__c/fields/Pressurized_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Pressurized_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pressurized Equipment</label>
    <type>Checkbox</type>
</CustomField>