unpackaged/main/default/objects/Form__c/fields/Pressurized_EquipmentPick__c.field-meta.xml
<CustomField>
    <fullName>Pressurized_EquipmentPick__c</fullName>
    <label>Pressurized Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perform isolation – LOTO, blinding or defeat</fullName>
            </value>
            <value>
                <fullName>Depressurize, drain, purge, and vent</fullName>
            </value>
            <value>
                <fullName>Relieve trapped pressure</fullName>
            </value>
            <value>
                <fullName>Do not work in the line of fire</fullName>
            </value>
            <value>
                <fullName>Anticipate residual pressure or fluids</fullName>
            </value>
            <value>
                <fullName>Secure all hoses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>