unpackaged/main/default/objects/Form__c/fields/Primary_EmergAssemblyArea__c.field-meta.xml
<CustomField>
    <fullName>Primary_EmergAssemblyArea__c</fullName>
    <label>Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>