unpackaged/main/default/objects/Form__c/fields/Proper_Gloves__c.field-meta.xml
<CustomField>
    <fullName>Proper_Gloves__c</fullName>
    <formula>INCLUDES( X4_Additional_PPE__c , &quot;Proper Gloves&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proper Gloves</label>
    <type>Checkbox</type>
</CustomField>