unpackaged/main/default/objects/Form__c/fields/PS2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>PS2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>