unpackaged/main/default/objects/Form__c/fields/Purged_with__c.field-meta.xml
<CustomField>
    <fullName>Purged_with__c</fullName>
    <label>Purged with:</label>
    <type>TextArea</type>
</CustomField>