unpackaged/main/default/objects/Form__c/fields/Record_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Record_Engine_Hours__c</fullName>
    <label>Record Engine Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>