unpackaged/main/default/objects/Form__c/fields/Replace_Meter_Batteries_if_needed__c.field-meta.xml
<CustomField>
    <fullName>Replace_Meter_Batteries_if_needed__c</fullName>
    <label>Replace Meter Batteries if needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>