unpackaged/main/default/objects/Form__c/fields/Respirator_Type__c.field-meta.xml
<CustomField>
    <fullName>Respirator_Type__c</fullName>
    <label>Respirator Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCBA</fullName>
            </value>
            <value>
                <fullName>Dust Mask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>