unpackaged/main/default/objects/Form__c/fields/Rock_Chokes_on_Wells__c.field-meta.xml
<CustomField>
    <fullName>Rock_Chokes_on_Wells__c</fullName>
    <label>Rock Chokes on Wells</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>