unpackaged/main/default/objects/Form__c/fields/Safety_Glasses_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Safety_Glasses_JSAPDF__c</fullName>
    <formula>INCLUDES( Eye_Protection__c , &quot;Safety Glasses&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Glasses</label>
    <type>Checkbox</type>
</CustomField>