unpackaged/main/default/objects/Form__c/fields/Safety_Shoes_Boots__c.field-meta.xml
<CustomField>
    <fullName>Safety_Shoes_Boots__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Shoes/Boots</label>
    <type>Checkbox</type>
</CustomField>