unpackaged/main/default/objects/Form__c/fields/Sample_Analysis_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Sample_Analysis_Obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Yes</description>
    <inlineHelpText>Check If Yes</inlineHelpText>
    <label>Sample Analysis Obtained</label>
    <type>Checkbox</type>
</CustomField>