unpackaged/main/default/objects/Form__c/fields/SCBA__c.field-meta.xml
<CustomField>
    <fullName>SCBA__c</fullName>
    <formula>INCLUDES( Respirator_Type__c , &quot;SCBA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SCBA</label>
    <type>Checkbox</type>
</CustomField>