unpackaged/main/default/objects/Form__c/fields/SCBA_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>SCBA_JSAPDF__c</fullName>
    <formula>INCLUDES(  Respirator_Type__c  , &quot;SCBA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SCBA</label>
    <type>Checkbox</type>
</CustomField>