unpackaged/main/default/objects/Form__c/fields/Secondary_EmergAssemblyArea__c.field-meta.xml
<CustomField>
    <fullName>Secondary_EmergAssemblyArea__c</fullName>
    <label>Secondary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>