unpackaged/main/default/objects/Form__c/fields/Separators_Dumping_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Separators_Dumping_Correctly__c</fullName>
    <label>Separators Dumping Correctly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>