unpackaged/main/default/objects/Form__c/fields/Simultaneous_Operations__c.field-meta.xml
<CustomField>
    <fullName>Simultaneous_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simultaneous Operations</label>
    <type>Checkbox</type>
</CustomField>