unpackaged/main/default/objects/Form__c/fields/Simultaneous_Operations_Pick__c.field-meta.xml
<CustomField>
    <fullName>Simultaneous_Operations_Pick__c</fullName>
    <label>Simultaneous Operations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow SIMOPS matrix</fullName>
            </value>
            <value>
                <fullName>MOC required for deviation from SIMOPS restrictions</fullName>
            </value>
            <value>
                <fullName>Interface between groups</fullName>
            </value>
            <value>
                <fullName>Use barriers and signs to segregate activities</fullName>
            </value>
            <value>
                <fullName>Have permit signed by leader of affected groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>