unpackaged/main/default/objects/Form__c/fields/Sky_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Sky_Conditions__c</fullName>
    <label>Sky Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clear/Sunny</fullName>
            </value>
            <value>
                <fullName>Partly Cloudy</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>