unpackaged/main/default/objects/Form__c/fields/Slips_Trips_and_Falls__c.field-meta.xml
<CustomField>
    <fullName>Slips_Trips_and_Falls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slips, Trips, and Falls</label>
    <type>Checkbox</type>
</CustomField>