unpackaged/main/default/objects/Form__c/fields/SO2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>SO2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SO2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>