unpackaged/main/default/objects/Form__c/fields/Soap_Wells_as_Directed__c.field-meta.xml
<CustomField>
    <fullName>Soap_Wells_as_Directed__c</fullName>
    <label>Soap Wells as Directed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>