unpackaged/main/default/objects/Form__c/fields/STF1_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>STF1_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STF1_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>