unpackaged/main/default/objects/Form__c/fields/STF2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>STF2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STF2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>