unpackaged/main/default/objects/Form__c/fields/Stop_the_Job_1__c.field-meta.xml
<CustomField>
    <fullName>Stop_the_Job_1__c</fullName>
    <label>Stop the Job 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>