unpackaged/main/default/objects/Form__c/fields/Stop_the_job__c.field-meta.xml
<CustomField>
    <fullName>Stop_the_job__c</fullName>
    <label>Stop the job</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>