unpackaged/main/default/objects/Form__c/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <type>TextArea</type>
</CustomField>