unpackaged/main/default/objects/Form__c/fields/Survey_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_End_Time__c</fullName>
    <label>Survey End Time</label>
    <type>DateTime</type>
</CustomField>