unpackaged/main/default/objects/Form__c/fields/Survey_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Start_Time__c</fullName>
    <label>Survey Start Time</label>
    <type>DateTime</type>
</CustomField>