unpackaged/main/default/objects/Form__c/fields/Tag_ID_of_Repair_If_Required__c.field-meta.xml
<CustomField>
    <fullName>Tag_ID_of_Repair_If_Required__c</fullName>
    <label>Tag ID of Repair - If Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>