unpackaged/main/default/objects/Form__c/fields/Tank_Integrity__c.field-meta.xml
<CustomField>
    <fullName>Tank_Integrity__c</fullName>
    <label>Tank Integrity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>