unpackaged/main/default/objects/Form__c/fields/Task_Leader_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Leader_Name__c</fullName>
    <label>Task Leader Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>