unpackaged/main/default/objects/Form__c/fields/Task_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Task_Step_2__c</fullName>
    <label>Task Step 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>