unpackaged/main/default/objects/Form__c/fields/Task_Steps__c.field-meta.xml
<CustomField>
    <fullName>Task_Steps__c</fullName>
    <label>Task Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>