unpackaged/main/default/objects/Form__c/fields/Total_Pig_run_time__c.field-meta.xml
<CustomField>
    <fullName>Total_Pig_run_time__c</fullName>
    <inlineHelpText>Please enter number of hours no minutes</inlineHelpText>
    <label>Total Pig run time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>