unpackaged/main/default/objects/Form__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <label>Treatment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment Type: Single Pig- Chemical in the Front</fullName>
                <label>Single Pig- Chemical in the Front</label>
            </value>
            <value>
                <fullName>Treatment Type: Single Pig-Chemical Behind</fullName>
                <label>Single Pig-Chemical Behind</label>
            </value>
            <value>
                <fullName>Treatment Type: Multi Pig-Chemical Between</fullName>
                <label>Multi Pig-Chemical Between</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>