unpackaged/main/default/objects/Form__c/fields/Treatment_Type_and_Method__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type_and_Method__c</fullName>
    <label>Chemical Type used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemical Type: Corrosion Inhibitor</fullName>
                <label>Corrosion Inhibitor</label>
            </value>
            <value>
                <fullName>Chemical Type: Biocide</fullName>
                <label>Biocide</label>
            </value>
            <value>
                <fullName>Chemical Type: Paraffin Dispersant</fullName>
                <label>Paraffin Dispersant</label>
            </value>
            <value>
                <fullName>Chemical Type: Other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>