unpackaged/main/default/objects/Form__c/fields/Try_Step_Required__c.field-meta.xml
<CustomField>
    <fullName>Try_Step_Required__c</fullName>
    <label>Try Step Required</label>
    <type>TextArea</type>
</CustomField>