unpackaged/main/default/objects/Form__c/fields/Tubing_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Tubing_Pressure__c</fullName>
    <description>Tubing Pressure</description>
    <label>Tubing Pressure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>